# TheBoard.API/swagger.json
@@ -132,6 +132,38 @@
         }
       }
     },
+    "/v1/Project/{ProjectId}": {
+      "get": {
+        "tags": [
+          "Project"
+        ],
+        "operationId": "Project_GetProjectById",
+        "parameters": [
+          {
+            "name": "ProjectId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProjectVM"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/Project": {
       "post": {
         "tags": [
